--- a/404.md
+++ b/404.md
@@ -5,4 +5,4 @@ title: 404 - Page not found
 
 Well, this is embarrasing. It appears as though the page you are looking for does not exist on this site. Maybe you can start looking for it at my [homepage]({{ site.baseurl }}/).
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+[<img src="{{ site.baseurl }}/images/error.svg" style="width: 100%;"/>]({{ site.baseurl }}/)
